Added group members and button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <button onclick="showMessage()">Click Me</button>
     <p id="output"></p>
 
+    <h2>Group Members</h2>
+    <ul>
+        <li>Samuel Lloyd Sol</li>
+        <li>Viene Sandoval</li>
+        <li>John Lloyd Laylay</li>
+    </ul>
+
+    <button onclick="changeColor()">Change Background</button>
+
     <script src="script.js"></script>
 </body>
 </html>
